@@ -23,7 +23,6 @@
 */
 
 #include <cmath>
-#include <sstream>
 
 #include "Task.h"
 #include "Transforms.h"
@@ -109,22 +108,9 @@ void Zoomify::run( Session* session, const std::string& argument ){
     }
 
     // Format our output
-    stringstream header;
-    string eof = "\r\n";
-
-    header << "Server: iipsrv/" << VERSION << eof
-           << "Content-Type: application/xml" << eof
-           << "Last-Modified: " << (*session->image)->getTimestamp() << eof
-           << session->response->getCacheControl() << eof
-	   << "X-Powered-By: IIPImage" << eof;
-
-    // Get our Access-Control-Allow-Origin value, if any
-    string cors = session->response->getCORS();
-    if( !cors.empty() ) header << cors << eof;
-
-    header << eof
-	   << "<IMAGE_PROPERTIES WIDTH=\"" << width << "\" HEIGHT=\"" << height << "\" "
-	   << "NUMTILES=\"" << ntiles << "\" NUMIMAGES=\"1\" VERSION=\"1.8\" TILESIZE=\"" << tw << "\" />";
+    stringstream header = session->response->createHTTPHeader( "xml", (*session->image)->getTimestamp() );
+    header << "<IMAGE_PROPERTIES WIDTH=\"" << width << "\" HEIGHT=\"" << height << "\" "
+	   << "NUMTILES=\"" << ntiles << "\" NUMIMAGES=\"1\" VERSION=\"1.8\" TILESIZE=\"" << tw << "\"/>";
 
     session->out->printf( (const char*) header.str().c_str() );
     session->response->setImageSent();
